--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@ body main{
     margin: 0px;
     padding: 0px;
     height: 100%;
-    width: 100%
+    width: 100%;
+    background: #ffffff;
 }
+
+.container{
+    margin-bottom:40px ;
+}
+
+/* Button section */
 
 .signIn{
     background: #21B573;
@@ -24,6 +31,26 @@ body main{
     border: none;
     outline: none; 
     text-align: left;  
+    
+}
+
+.deck-btn{
+    background: #21B573;
+    width: 137px;
+    height: 35px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    align-self: center;
+    color: #FFFFFF;
+    border-radius: 33px;
+    border: transparent; 
+}
+
+.deck-btn:hover, .GetStarted:hover, .allButton:hover, .signIn:hover{
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .GetStarted{
@@ -47,8 +74,14 @@ header{
 }
 
 .sectionOne{
-    margin-top: 50px;
-    padding: 30px;
+    margin-top: 40px;
+    padding: 20px;
+
+}
+
+.sectionOne-box{
+    margin: 2%;
+    padding: 1%;
 }
 
 .writing1{
@@ -123,6 +156,7 @@ header{
     width: 250px;
     height: 250px;
     background: #F8FFFB;
+    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     margin: 2%;
     padding:2%;
@@ -130,7 +164,106 @@ header{
 
 .sectionTwo-box:hover{
     background: #FFFFFF;
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+    box-shadow: -20px 20px 30px rgba(0, 0, 0, 0.3);
+    border: #2f2cf3 0.5px solid;
     border-radius: 10px;
-    transform: scale(1.05);
+    transform: scale(0.96);
+    cursor: pointer;
+}
+
+/* Section Three Card Decks */
+
+.sectionThree{
+    margin-top: 80px;
+}
+
+.sectionThree-h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 54px;
+    color: #413960;
+    margin-bottom: 20px;
+}
+.decks{
+    padding: 24px 20px ;
+    background: #FFFFFF;
+    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+}
+
+.decks:hover{
+    background: #FFFFFF;
+    box-shadow: -10px 20px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    transform: scale(0.96);
+    cursor: pointer;
+}
+
+
+h5{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #413960;
+}
+
+.deck-p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #585859;
+}
+
+.deck-img{
+    width: 24px;
+    height: 24px;
+}
+
+/* section four */
+
+
+.man-img{
+    width: 120px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.h22{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 54px;
+    color: #000000;
+}
+
+.sectionFour-p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
+    color: #000000;
+}
+
+/* last section*/
+
+.last-section{
+    background: #282531;
+    font-style: normal;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin-top: 50px;
+    padding: 40px;
+}
+
+.last-section-h5{
+    color: #FFFFFF;
+}
+
+footer{
+    color: #CDCDCD;
 }
